k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-risk-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: credit-risk-api

  template:
    metadata:
      labels:
        app: credit-risk-api

    spec:
      containers:
      - name: credit-risk-api
        image: acrguetchcreditrisk01.azurecr.io/risk-api:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false

        startupProbe:
          httpGet:
            path: /health
            port: 8000
          failureThreshold: 30
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /ready
            port: 8000
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          periodSeconds: 10

        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets"
          readOnly: true

      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: kv-credit-risk
