k8s/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-server
  template:
    metadata:
      labels:
        app: mlflow-server
    spec:
      containers:
      - name: mlflow
        image: creditriskacrguetch.azurecr.io/mlflow:latest

        resources:
          requests:
            cpu: "250m"
            memory: "2Gi"
          limits:
            cpu: "1"
            memory: "2Gi"

        ports:
        - containerPort: 5000

        volumeMounts:
        - name: mlflow-data
          mountPath: /mlflow

        volumeMounts:
        - name: mlflow-data
          mountPath: /mlflow
      volumes:
      - name: mlflow-data
        persistentVolumeClaim:
          claimName: mlflow-pvc
