k8s/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server
spec:
  selector:
    app: mlflow-server
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
