k8s/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-risk-streamlit-service
spec:
  selector:
    app: credit-risk-streamlit

  ports:
  - port: 80
    targetPort: 8501
    protocol: TCP

  type: ClusterIP
