k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: credit-risk-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.credit-risk.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: credit-risk-service
            port:
              number: 80

  - host: app.credit-risk.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: credit-risk-streamlit-service
            port:
              number: 80

  - host: mlflow.credit-risk.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-service
            port:
              number: 5000
